--- a/README
+++ b/README
@@ -1,19 +1,12 @@
-Pwrake - Parallel Workflow extension for Rake 
-                   Masahiro Tanaka 2010-08-16
+Pwrake2 - Parallel Workflow extension for Rake
+                   Masahiro Tanaka 2012-04-14
+
+*** under development ***
 
 * Required package
 
- - Ruby 1.8.x + Rake 0.8.7
- - or Ruby 1.9.x
+ - Ruby 1.9.3 + Rake 0.9.2.2
 
 * Install
 
  $ ruby setup.rb
-
-* Workflow demo
-
- - See demo directories:
-
-  demo/hierarchy : Dummy hierarchy workflow
-  demo/montage   : Montage workflow
-  demo/spcam	 : Subaru SprimeCam Data Reduction
